Fix z-index issue with poster tooltips

--- a/src/scss/posters.scss
+++ b/src/scss/posters.scss
@@ -1,4 +1,5 @@
 .posters {
+  z-index: 1;
   background-color: #000000;
   padding-block: 6rem;
 
@@ -50,12 +51,17 @@
   }
 
   &__tooltip {
+    position: absolute;
     background-color: #1C1C1C;
     padding: 0.5rem;
     border-radius: 0.5rem;
     width: 90%;
     box-shadow: 0 0 1rem #000000;
     display: none;
+  }
+
+  &:has(&__tooltip[data-show]) {
+    z-index: 999;
   }
 
   &__tooltip[data-show] {
